# readani

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  build-dmg.sh  build-pkg.sh  gen_locales.py  index.html  package-lock.json  package.json  vite.config.ts  website.md
.github/workflows/: release.yml
docs/: TODO.md  release.md
docs/plans/: 2025-05-20-app-content-decomposition.md  2026-04-19-four-panel-reader-workspace-design.md  2026-04-19-four-panel-reader-workspace.md  2026-04-19-page-translation-controls-design.md  2026-04-19-page-translation-controls.md  2026-04-19-pdf-navigation-design.md  2026-04-19-pdf-navigation.md  2026-04-19-pdf-panel-controls-design.md  2026-04-19-pdf-panel-controls.md  2026-04-19-reader-resizing-design.md  2026-04-19-reader-resizing.md  2026-04-20-reader-panel-toggle-design.md  2026-04-20-reader-panel-toggle.md  2026-04-20-settings-presets-design.md  2026-04-20-settings-presets.md  2026-04-20-three-column-reader-workspace-design.md  2026-04-20-three-column-reader-workspace.md  (+12 more)
scripts/: import_apple_certificate.sh  notarize_dmg.sh  release_homebrew.sh
src/: App.css  App.tsx  AppOpenFlow.test.ts  AppSplitResizeHandle.test.tsx  AppTheme.test.tsx  AppTypographyFont.test.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.AppStore.plist  Entitlements.plist  Info.iOS.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  lib.rs  main.rs  page_cache.rs  providers.rs
src/lib/: i18n.ts  (+48 more)
(+54 files in other folders)
